--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,54 @@
-
-asgiref = "*"
-"autopep8" = "*"
-dj-database-url = "*"
-gunicorn = "*"
-pycodestyle = "*"
-python-decouple = "*"
-pytz = "*"
-sqlparse = "*"
-toml = "*"
-whitenoise = "*"
-Django = "*"
-Unipath = "*"
-pandas = "*"
-scikit-learn = "*"
-matplotlib = "*"
-neattext = "*"
-django-crispy-forms = "*"
-bokeh = "*"
-python_version = "*"
+asgiref==3.4.1
+autopep8==1.5.7
+backports.entry-points-selectable==1.1.0
+bokeh==2.4.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+cycler==0.10.0
+distlib==0.3.3
+dj-database-url==0.5.0
+Django==3.2.7
+django-crispy-forms==1.13.0
+docutils==0.17.1
+filelock==3.2.0
+gunicorn==20.1.0
+idna==3.2
+Jinja2==3.0.1
+joblib==1.0.1
+kivy-deps.angle==0.3.0
+kivy-deps.glew==0.3.0
+kivy-deps.sdl2==0.3.1
+Kivy-Garden==0.1.4
+kiwisolver==1.3.2
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+neattext==0.1.2
+numpy==1.21.2
+packaging==21.0
+pandas==1.3.3
+Pillow==8.3.2
+pipenv==2021.5.29
+platformdirs==2.4.0
+pycodestyle==2.7.0
+Pygments==2.10.0
+pyparsing==2.4.7
+pypiwin32==223
+python-dateutil==2.8.2
+python-decouple==3.5
+pytz==2021.3
+pywin32==301
+PyYAML==5.4.1
+requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
+six==1.16.0
+sqlparse==0.4.2
+threadpoolctl==3.0.0
+toml==0.10.2
+tornado==6.1
+typing-extensions==3.10.0.2
+Unipath==1.1
+urllib3==1.26.7
+virtualenv==20.8.1
+virtualenv-clone==0.5.7
+whitenoise==5.3.0
